styled header, nav, main, and images size changed

--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack and the Beans bowl</title>
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css">
   </head>
   <body>
     <header>
-      <div class="JackLogo"></div>
+      <div class="logo"></div>
       <h1>Jack and the Beans bowl</h1>
+
       <nav>
         <a href="link1">Home</a>
-        <a href="link2">Beans</a>
-        <a href="link3">Lentils</a>
-        <a href="link4">Chickpeas</a>
+        <a href="link2">Workshops</a>
+        <a href="link3">Recipes</a>
+        <a href="link4">About us</a>
       </nav>
     </header>
     <main>
-        <img src="./images/legumes-stack.jpg" alt="Different types of legumes"/>
+
+        <section class="legume-type">
+            <img src="./images/beans-square.jpeg" alt="Beans plate">
+            <h2> Beans</h2>
+        </section>
+
+        <section class="legume-type">
+            <img src="./images/RedLentils-square.jpeg" alt="raw red lentils">
+            <h2> Lentils</h2>
+        </section>
+
+        <section class="legume-type">
+            <img src="./images/chickpeas-square.jpeg" alt="raw chickpeas">
+            <h2> Chickpeas</h2>
+        </section>
+        
+        
+
         <p> Text relevant on legumes explaining their attributes and varietes
             blah blah blah, yara
             yara yara yara
