--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -14,26 +14,12 @@
       <nav>
         <a href="#">Home</a>
         <a href="./pages/workshops.html">Workshops</a>
-        <a href="./pages/recipes.html">Recipes</a>
+        <a href="#">Recipes</a>
         <a href="./pages/about.html">About us</a>
       </nav>
     </header>
     <main>
-
-        <section class="legume-type">
-            <img src="./images/beans-square.jpeg" alt="Beans plate">
-            <h2> Beans</h2>
-        </section>
-
-        <section class="legume-type">
-            <img src="./images/RedLentils-square.jpeg" alt="raw red lentils">
-            <h2> Lentils</h2>
-        </section>
-
-        <section class="legume-type">
-            <img src="./images/chickpeas-square.jpeg" alt="raw chickpeas">
-            <h2> Chickpeas</h2>
-        </section>
+    <p>Recipes information</p>
     </main>
     <footer>
         <p>Copyright and contact info and also something el</p>
