--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -12,28 +12,14 @@
       <h1>Jack and the Beans bowl</h1>
 
       <nav>
-        <a href="#">Home</a>
-        <a href="./pages/workshops.html">Workshops</a>
+        <a href="../index.html">Home</a>
+        <a href="#">Workshops</a>
         <a href="./pages/recipes.html">Recipes</a>
         <a href="./pages/about.html">About us</a>
       </nav>
     </header>
     <main>
-
-        <section class="legume-type">
-            <img src="./images/beans-square.jpeg" alt="Beans plate">
-            <h2> Beans</h2>
-        </section>
-
-        <section class="legume-type">
-            <img src="./images/RedLentils-square.jpeg" alt="raw red lentils">
-            <h2> Lentils</h2>
-        </section>
-
-        <section class="legume-type">
-            <img src="./images/chickpeas-square.jpeg" alt="raw chickpeas">
-            <h2> Chickpeas</h2>
-        </section>
+      <p>Workshops information</p>
     </main>
     <footer>
         <p>Copyright and contact info and also something el</p>
