--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright and contact info and also something el</p>
+        <p>Copyright and contact info and also something else</p>
     </footer>
   </body>
 </html>
